# python-starter

./: .editorconfig  .envrc  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  gitleaks.yml
src/myproject/: __init__.py  config.py  errors.py  example_service.py  log.py
tests/: conftest.py  test_config.py  test_example_service.py  test_log.py
