[project]
name = "myproject"
version = "0.1.0"
description = "A new Python project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "ak2k" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "structlog>=24",
    "anyio>=4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myproject"]

# --- ruff: lint + format ---
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade — keeps agents from regressing to old idioms
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async correctness — high signal
    "PTH",           # pathlib over os.path
    "TC",            # TYPE_CHECKING import discipline
    "RET",           # return-statement hygiene
    "PIE",           # misc
    "PL",            # pylint subset
    "ANN",           # require annotations — agents drop them otherwise
    "S",             # bandit (security)
    "TRY",           # try/except hygiene
    "BLE",           # no bare except
    "N",             # naming
    "D",             # docstrings (relaxed in tests via per-file-ignores)
]
ignore = [
    "D100", "D104", "D107",  # don't require module/package/__init__ docstrings
    "ANN401",                # tactically allow Any — basedpyright reports it separately
    "TRY003",                # exception message length — too prescriptive
    "PLR0913",               # many arguments — verb signatures are wide
    "D203",                  # conflicts with D211
    "D213",                  # conflicts with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "PLR2004"]  # asserts + docs + magic numbers ok in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

# --- basedpyright: types ---
[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportImplicitOverride = "error"
reportUnusedCallResult = "none"
reportAny = "warning"  # the killer feature vs vanilla pyright

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --cov=src --cov-report=term-missing:skip-covered"
xfail_strict = true
filterwarnings = ["error"]  # deprecations become test failures — catch early
markers = [
    # Pre-declare custom markers here; `--strict-markers` rejects undeclared ones.
    # "slow: marks tests as slow (deselect with -m 'not slow')",
    # "integration: requires external services",
]

# --- coverage ---
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80  # see AGENTS.md "Appropriate divergence" — lower for CLIs
